# SDL_ttf

./: CMakeLists.txt
cmake/: SDL_ttf_Config.cmake.in
cmake/Hunter/disabled-mode/: SDL2Config.cmake  freetypeConfig.cmake
